# low-poly-water

./: .gitignore  CMakeLists.txt  README.md
glad/: CMakeLists.txt  glad.c
glad/include/: glad.h
shaders/: cube.frag  cube.vert  gui.frag  gui.vert  scene.frag  scene.vert  textured.frag  textured.vert  untextured.frag  untextured.vert  water.frag  water.geom  water.tesc  water.tese  water.vert
src/: camera.cpp  camera.h  camera.hh  gui_renderer.cpp  gui_renderer.hh  main.cpp  mesh.cpp  mesh.hh  model.cpp  model.hh  obj_loader.cpp  obj_loader.hh  object.cpp  object.hh  shader.cpp  shader.hh  stb_image.h  texture.cpp  texture.hh  tiny_obj_loader.hh  utils.h  utils.hh  water_frame_buffers.cpp  water_frame_buffers.hh
